--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 			<div class="header__card">
 				<p>Master ,FDU School of Mathematics , probability and statistics </p>
         <!-- todo  -->
-				<p></p>
-				<a href="liujun2518@outlook.com" class="link email_at">  liujun2518@outlook.com</a>
+				<p>liujun2518@outlook.com</p>
+				<!-- <a href="liujun2518@outlook.com" class="link email_at">  liujun2518@outlook.com</a> -->
 				<p>School of Mathematics, Fudan University</p>
 				<!-- <a
 					href="https://scholar.google.com.hk/citations?user=VlHMPKoAAAAJ&hl=zh-CN"
@@ -108,9 +108,6 @@
                 <p>Since2024, FuDan University , Master- Mathematics</p>
                 <p>Supervison : </p>
               </div>
-              <div>
-                <span class="date meta">2023</span>
-              </div>
             </div>
           </li><!-- list item -->
 
@@ -118,9 +115,6 @@
             <div class="flex-wrapper">
               <div>
                 <p>2020-2024 , Dalian University of Technology  Bachelor- Mathematics </p>
-              </div>
-              <div>
-                <span class="date meta">2023</span>
               </div>
             </div>
           </li><!-- list item -->
