--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		</div>
 		<div class="item">
 			<ul>
+        <li><a href="#introduction">Introduction</a></li>
 				<li><a href="#interest">Interest</a></li>
 				<li><a href="#awards">Eduaction Experience</a></li>
 				<li><a href="#public">Publications</a></li>
@@ -39,7 +40,7 @@
 				<!-- header profile-->
 
 				<div class="header__intro">
-					<h2 class="heading--primary">DR. Jun Liu</h2>
+					<h2 class="heading--primary">Jun Liu</h2>
 				</div>
 				<!-- header intro -->
 			</div>
@@ -60,6 +61,19 @@
 	<main class="content">
     
     <div class="container">
+      <section class="section">
+        <a name="introduction"></a>
+        <h2 class="section__title">Introduction</h2>
+       <p>shdahodsahdhsaohdoashdohasodh
+        asdasd
+        asdasdasda
+        asdasd
+       </p>  
+       <a href="./pdf/cv.pdf"> check my cv</p>
+      </section><!-- section -->
+
+
+
       <a name="interest"></a>
     	<!-- <div class="news">
     		<a name="interest"></a>
