--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 		<div class="item">
 			<ul>
         <li><a href="#introduction">Introduction</a></li>
-				<li><a href="#interest">Interest</a></li>
 				<li><a href="#awards">Eduaction Experience</a></li>
 				<li><a href="#public">Publications</a></li>
 				<li><a href="#service">Services</a></li>
@@ -67,47 +66,14 @@
        <p>shdahodsahdhsaohdoashdohasodh
         asdasd
         asdasdasda
-        asdasd
+        asdasdasdashdkahdhasldhasjhdlashlhdasdjkasgkdgkasgdkgasjkdgkjashdkjhsakhgdkjasgdjkgasjkdgjkasgdkjakshdgkasgdkasgkdgaksjgdkasgkdjgaskgdkgaskd
        </p>  
-       <a href="./pdf/cv.pdf"> check my cv</p>
+       <a href="./fuck.pdf" style="display: inline-block; padding: 10px 20px; background-color: #4CAF50; color: white; text-decoration: none; font-weight: bold; border-radius: 5px; font-size: 18px;">Check my CV</a>
+
       </section><!-- section -->
 
 
 
-      <a name="interest"></a>
-    	<!-- <div class="news">
-    		<a name="interest"></a>
-    		<h2 class="section__title">Latest News</h2>
-      -->	
-    	
-		<div class="section1">
-			<h2 class="section__title">Research Interests</h2>
-			<div class="test">
-				<img src="./pic/pic1.png"></img>
-				<h4>Thorey of Large deviation </h4>
-			</div>
-			<div class="slice">
-				<img src="./pic/pic2.png"></img>
-				<h4>Stochastic Analysis</h4>
-			</div>
-			<div class="locate">
-				<img src="./pic/pic3.png"></img>
-				<h4>Percolation</h4>
-			</div>
-			<!-- <div class="search">
-				<img src="./pic/pic4.png"></img>
-				<h4>Search-based Software Engineering</h4>
-			</div>
-			<div class="evolution">
-				<img src="./pic/pic5.png"></img>
-				<h4>Evolutionary Computing</h4>
-			</div>
-				  
-			<div class="machine">
-				<img src="./pic/pic6.png"></img>
-				<h4>Machine Learning</h4>
-			</div> -->
-		</div>
 
 	  
 
