--- a/index.html
+++ b/index.html
@@ -63,12 +63,15 @@
       <section class="section">
         <a name="introduction"></a>
         <h2 class="section__title">Introduction</h2>
-       <p>shdahodsahdhsaohdoashdohasodh
-        asdasd
-        asdasdasda
-        asdasdasdashdkahdhasldhasjhdlashlhdasdjkasgkdgkasgdkgasjkdgkjashdkjhsakhgdkjasgdjkgasjkdgjkasgdkjakshdgkasgdkasgkdgaksjgdkasgkdjgaskgdkgaskd
+       <p>My name is Alex Chen, and I'm a software engineer with a passion for developing innovative solutions that make a positive impact. I graduated from Stanford University with a degree in Computer Science and have spent the last 5 years working at tech startups in Silicon Valley.
+
+        My expertise lies in full-stack web development, with a focus on building scalable applications using modern JavaScript frameworks like React and Node.js. I'm also deeply interested in machine learning and have recently completed several projects applying AI to solve real-world problems.
+        
+        Outside of work, I'm an avid rock climber and volunteer teaching coding classes to underprivileged youth. I believe technology has the power to transform lives, and I'm always seeking new opportunities to use my skills to contribute to meaningful projects.
+        
+        I'm excited to continue growing as a developer and collaborating with like-minded individuals who share my enthusiasm for leveraging technology to create a better world. Please feel free to reach out if you'd like to connect or discuss potential opportunities!
        </p>  
-       <a href="./fuck.pdf" style="display: inline-block; padding: 10px 20px; background-color: #4CAF50; color: white; text-decoration: none; font-weight: bold; border-radius: 5px; font-size: 18px;">Check my CV</a>
+       <a href="./pdf/cv.pdf" style="display: inline-block; padding: 10px 20px; background-color: #4c8baf; color: white; text-decoration: none; font-weight: bold; border-radius: 5px; font-size: 18px;">Check my CV</a>
 
       </section><!-- section -->
 
